2000-05-18  Steve Langasek <vorlon@dodds.net>

	* server/gnocatan-server-console.c: Plugged in getopt() support so
	that the user has (some) control over the game settings in the
	console server.  Documentation later.

2000-05-17  Bibek Sahu <scorpio@dodds.net>

	* server/gnocatan-server-console.c: removed game_list_item_t
	structure.  The params structure stores a title, so just use that
	instead.  Original filename is not all that relevant; if it becomes
	relevant, we can add it to GameParams later.  Also added a function
	to lookup parameters by title.  Changed hash table to store/lookup
	by string, rather than pointer address.

2000-05-17  Bibek Sahu <scorpio@dodds.net>

	* server/gnocatan-server-console.c: filled in global variables, and 
	added a function to stuff all the game types in a hash.  This will
	be relevant later when it can be changed over the network.
	----> Made the console-only server work. :-)

2000-05-17  Steve Langasek <vorlon@dodds.net>

	* common/driver.c, server/glib-driver.c: Finished moving glib
	driver to the common/ subdirectory.

	* common/common_gtk.c: Removed gdk-dependent input functions.

	* server/gnocatan-server-console.c: Moved some initialization code
	for the console server's UI driver into the main loop.

	* server/server.h: Polished the include list to eliminate redundancies.

	* common/Makefile.am: Added common_glib.c, common_glib.h to file list.

	* common/common_glib.[ch]:  Added generic glib driver for common
	code.

	* common/driver.h: Fixed prototypes within the UI driver to use
	guint in place of gint.

	* common/common_gtk.h: Changed __common_gui_h to __common_gtk_h.

	* server/glib-driver.c: Used the G_PRIORITY_DEFAULT define in
	place of constant as argument.

2000-05-17  Bibek Sahu <scorpio@dodds.net>

	* server/Makefile.am: Added glib-driver.c and glib-driver.h, which
	are used by the console server.

	* server/glib-driver.[ch]: Functions necessary for the console
	server.
	